--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=your_server;Database=your_database;User Id=your_username;Password=your_password;"
-  }
+  "AllowedHosts": "*"
 }
