--- a/.github/workflows/addsqlapp_oa-demo-web-ruslany.yml
+++ b/.github/workflows/addsqlapp_oa-demo-web-ruslany.yml
@@ -18,23 +18,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup MSBuild path
-        uses: microsoft/setup-msbuild@v1.0.2
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '6.0.x'
 
-      - name: Setup NuGet
-        uses: NuGet/setup-nuget@v1.0.5
+      - name: Restore dependencies
+        run: dotnet restore app/sample-app.csproj
 
-      - name: Restore NuGet packages
-        run: nuget restore app\sample-app.csproj
+      - name: Build
+        run: dotnet build app/sample-app.csproj --configuration Release --no-restore
 
-      - name: Publish to folder
-        run: msbuild app\sample-app.csproj nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
+      - name: Publish
+        run: dotnet publish app/sample-app.csproj --configuration Release --output published
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: ASP-app
-          path: '/published/**'
+          path: 'published/**'
 
   deploy:
     runs-on: windows-latest
