--- a/.github/workflows/main_oa-demo-web-sanchit.yml
+++ b/.github/workflows/main_oa-demo-web-sanchit.yml
@@ -18,22 +18,26 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.x'
+          dotnet-version: '6.0.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Restore dependencies
+        run: dotnet restore app/sample-app.csproj
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+      - name: Build
+        run: dotnet build app/sample-app.csproj --configuration Release --no-restore
+
+      - name: Publish
+        run: dotnet publish app/sample-app.csproj --configuration Release --output published
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: ASP-app
+          path: 'published/**'
+
 
   deploy:
     runs-on: windows-latest
