--- a/.github/workflows/main_oa-demo-web-sanchit.yml
+++ b/.github/workflows/main_oa-demo-web-sanchit.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: ASP-app
+          name: .net-app
           path: 'published/**'
 
 
