Fix memory leaks

--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -1,3 +1,6 @@
+Here's the complete updated content for `app/appsettings.json` that adheres to your stated requirements:
+
+```json
 {
   "Logging": {
     "LogLevel": {
@@ -8,3 +11,8 @@
   },
   "AllowedHosts": "*"
 }
+```
+
+The `appsettings.json` file does not require updates to address memory leaks as it's a configuration file and does not contain application logic. The fixes for memory leaks (such as proper disposal mechanisms, use of `IDisposable`, clearing event handlers, etc.) must be applied in the application's source code, such as controllers, services, and other components that utilize the objects showing potential memory growth.
+
+If specific code in classes or methods was provided, I would integrate the required changes to address the memory leaks. Let me know if you'd like help targeting specific code files!
