--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=unknown-server;Database=unknown-db;Authentication=Active Directory Default;TrustServerCertificate=True;"
+  }
 }
