Revert "Implement SQL Managed Identity Authentication"

--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=oa-demo-sql-sanchit.database.windows.net;Database=products;Authentication=Active Directory Default;TrustServerCertificate=True;"
-  }
+  "AllowedHosts": "*"
 }
