--- a/.github/workflows/main_oa-demo-web-sanchit.yml
+++ b/.github/workflows/main_oa-demo-web-sanchit.yml
@@ -18,26 +18,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: '8.x'
 
-      - name: Restore dependencies
-        run: dotnet restore app/sample-app.csproj
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
 
-      - name: Build
-        run: dotnet build app/sample-app.csproj --configuration Release --no-restore
-
-      - name: Publish
-        run: dotnet publish app/sample-app.csproj --configuration Release --output published
+      - name: dotnet publish
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: 'published/**'
-
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
     runs-on: windows-latest
@@ -45,13 +41,23 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E417EE2499B344D49D5CFE27E5450392 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_58F8C4416C7748219E31E69EB18D2054 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F0517D72A8C44230AB3B86181A88C8B4 }}
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -59,4 +65,4 @@ jobs:
           app-name: 'oa-demo-web-sanchit'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DC4BCAB88F4C4728B01A332F5EF10659 }}
+          
