--- a/.github/workflows/main_oa-demo-web-prod-westus.yml
+++ b/.github/workflows/main_oa-demo-web-prod-westus.yml
@@ -1,12 +1,9 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - oa-demo-web-prod-westus
+name: oa-demo-web-prod-westus
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
